# senior-project-backend-fastapi

./: Dockerfile  commands.py  docker-compose.yml  jetson.py  pyproject.toml  requirements.txt  run_server.sh  stop_server.sh  test.py
AcT/: nano.py
AcT/utils/: config.yaml  data.py  sort.py  tf_data_augmentation.py  tools.py  visualize.py
AcT/utils/.ipynb_checkpoints/: trainer-checkpoint.py  transformer-checkpoint.py
app/: config.py  database.py  dependencies.py  main.py  test.py
app/auth/: authentication.py
app/hgr/: gesture_transformer.pkl  recognize.py
app/kafka/: consumer.py  producer.py
app/models/: association.py  camera_models.py  gesture_statistics.py  notification_models.py  recognition_models.py  user_models.py
app/repositories/: camera_repository.py  notification_repository.py  recognition_repository.py  user_repository.py
app/routers/: camera_router.py  gesture_statistics_router.py  notification_router.py  notifications_websockets.py  recognition_router.py  user_router.py  webrtc.py  websockets.py  websockets_recognition.py
app/schemas/: camera_schemas.py  gesture_statistics_schemas.py  notification_schemas.py  recognition_schemas.py  user_schemas.py
app/services/: camera_service.py  gesture_statistics_service.py  notification_service.py  recognition_service.py  user_service.py
app/static/: index.html
app/workers/: recognition_worker.py
config/: nginx.conf  turnserver.conf
jetson/: gesture_recognition.py  jetson.py  model.py  trained_gesture_gcn.pth
